Remove styles that prevent load more search items on mobile

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,10 +14,6 @@ body {
   font-family: FZLTXIHJW--GB1-0, "hiragino sans gb", "Helvetica Neue", Helvetica, STHeiTi, Arial;
 }
 
-html, body {
-  height: 100%;
-}
-
 .noscroll {
   overflow: hidden;
 }
